# task_for_hook

./: README.md
hook-docker/: .env.template  docker-compose.yaml
src/: .dockerignore  Dockerfile  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2023_11_26_0658-8fade6f519e7_initial.py
src/application/: database.py  exceptions.py  main.py  schemas.py  settings.py
src/application/auth/: managers.py  models.py  permissions.py  schemas.py  views.py
src/application/users/: managers.py  models.py  schemas.py  utils.py  views.py
