[tool.poetry]
name = "hook"
version = "0.1.0"
description = ""
authors = ["Ilya Smelov  <PivnoyFei@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.10"
asyncpg = "^0.29.0"
bcrypt = "^4.0.1"
fastapi = "^0.100"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
wrap_length = 100
include_trailing_comma = true
use_parentheses = true
skip = [".gitignore", ".dockerignore", "alembic"]
extend_skip = ["_version.py", "versioneer.py", "__init__.py"]
extend_skip_glob = ["docs/*", "*venv*/*"]

[tool.black]
line-length = 100
extend-exclude = '(.*\/_version.py|.*venv.*\/|.*alembic.*\/.*)'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
